@@ -1,12 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         CGI-Session
-version:      4.00_03
+version:      4.00_04
 version_from: Session.pm
 installdirs:  site
 requires:
     Data::Dumper:                  
     Digest::MD5:                   
+    Test::More:                    
 
 distribution_type: module
 generated_by: ExtUtils::MakeMaker version 6.16
